# v1-security-event-clustering

./: .gitignore  README.md  backend.md  dissertation.md  paper.md
backend/: cluster_analyzer.py  deep_clustering.py  deep_mvc.model  event_parser.py  event_table_query.py  generate_samples.py  gnn_clustering.py  main.py  pyproject.toml  requirements-linu.txt  requirements-win.txt  security_insights.py  sequence_clustering.py  sequence_featurization.py  trainer.py
docs/: ARCHITECTURE_DETAILS.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.txt  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README_SUBSYSTEM_ENHANCEMENT.md  SUBSYSTEM_FIELDS.md  TESTING_SUBSYSTEM_FIELDS.md  backend.md  generated_events.txt  reporter.md  research.docx  research.md
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.cjs
frontend/app/: layout.tsx  page.tsx
frontend/components/: cluster-details.tsx  cluster-visualization.tsx  event-log-upload.tsx  events-popup-table.tsx  security-insights.tsx  threat-analysis.tsx  training-config.tsx  training-progress.tsx  visualization-tab.tsx
frontend/components/ui/: badge.tsx  dialog.tsx
frontend/lib/: api.ts  clustering-models.ts  format-event-datetime.ts  ioc-export.ts
frontend/public/: index.html
frontend/src/: App.tsx  globals.css  index.tsx
